# pokemon

./: .gitignore  Cargo.toml  README.md  pokemon.code-workspace  run_esp.sh
.cargo/: config
docs/: battle.xcf  designdoc.odt  statemachine.odg
pokedex/moves/: 1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  135  (+123 more)
pokedex/pokemon/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+111 more)
src/: lib.rs  main.rs
